--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "rimraf": "^3.0.2",
     "service-worker-mock": "^2.0.5",
     "ts-jest": "^26.5.5",
-    "ts-loader": "^9.0.2",
+    "ts-loader": "9.0.1",
     "typescript": "^4.2.4",
-    "webpack": "^5.33.2",
+    "webpack": "^5.35.0",
     "webpack-cli": "^4.6.0"
   }
 }
