--- a/.mergify.yml
+++ b/.mergify.yml
@@ -14,5 +14,5 @@ pull_request_rules:
       - base=main
     actions:
       merge:
-        method: merge
+        method: squash
         strict: smart
