--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,21 +15,15 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup NodeJS
         uses: actions/setup-node@v3.6.0
-        with:
-          node-version: 16
       - name: Install dependencies
         run: |
-          yarn install
-      - name: Build
-        run: |
-          yarn build
+          npm install
       - name: Test
         run: |
-          yarn test
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          npm test
+        env:
+          CF_KV_NAMESPACE: ${{ secrets.CF_KV_NAMESPACE }}
+          CF_KV_PREVIEW_NAMESPACE: ${{ secrets.CF_KV_PREVIEW_NAMESPACE }}
   deploy:
     runs-on: ubuntu-latest
     name: Deploy
@@ -43,11 +37,8 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           preCommands: |
-            yarn install
-            yarn liquidify-wrangler
-            yarn build
+            npm install
+            npm run config
         env:
-          CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
-          CF_ZONE_ID: ${{ secrets.CF_ZONE_ID }}
-          CF_DOMAIN: ${{ secrets.CF_DOMAIN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
           CF_KV_NAMESPACE: ${{ secrets.CF_KV_NAMESPACE }}
