--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230404.0",
-    "@vitest/coverage-c8": "^0.30.1",
-    "liquidjs": "^10.7.0",
-    "typescript": "^5.0.4",
-    "vitest": "^0.30.1",
+    "@vitest/coverage-v8": "^2.1.1",
+    "liquidjs": "^10.16.7",
+    "typescript": "^5.6.2",
+    "vitest": "^2.1.1",
     "wrangler": "2.15.0"
   },
   "private": true,
