--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "type": "module",
   "version": "0.0.0",
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230404.0",
+    "@cloudflare/workers-types": "^4.20240909.0",
+    "@swc/cli": "^0.4.1-nightly.20240914",
+    "@swc/core": "^1.7.26",
     "@vitest/coverage-v8": "^2.1.1",
     "liquidjs": "^10.16.7",
     "typescript": "^5.6.2",
     "vitest": "^2.1.1",
-    "wrangler": "2.15.0"
+    "wrangler": "^3.78.2"
   },
   "private": true,
   "scripts": {
     "config": "node liquidify-wrangler.mjs",
     "start": "npm run config && wrangler dev",
     "deploy": "npm run config && wrangler publish",
-    "test": "npm run config && vitest",
-    "test-with-coverage": "npm run config && vitest run --coverage"
+    "test-build": "npm run config && spack --config ./spack.config.cjs",
+    "test": "npm run test-build && vitest --run"
   }
 }
